--- a/layouts/partials/indexheader.html
+++ b/layouts/partials/indexheader.html
@@ -35,6 +35,9 @@
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/reproach.min.css" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/bigfoot-default.css" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/webmention.css" />
+  {{- if .Site.Author.email }}
+  <link rel="me" href="mailto:{{ .Site.Author.email }}" />
+  {{- end }}
   <!-- indieweb components -->
   <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
   <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
@@ -46,7 +49,8 @@
   <link rel="alternate" type="application/json" title="Ascraeus JSON feed" href="{{ .Site.BaseURL}}jsonfeed/index.json" />
   <link rel="self" href="{{ .Site.BaseURL }}" />
   <link rel="hub" href="https://switchboard.p3k.io/" />
-  
+  <link rel="me" href="https://micro.blog/dgold" />
+
   <!-- Metadata for Twitter and OpenGraph -->
   {{ partial "twittergraph.html" . }}
 </head>
