Section Pages need Section Markup

--- a/layouts/section/like.html
+++ b/layouts/section/like.html
@@ -1,4 +1,4 @@
-{{ partial "header.html" . }}
+{{ partial "secheader.html" . }}
 {{ partial "sidebar.html" . }}
 	<content>{{"<!-- from section.micro.html //-->" | safeHTML}}
 	  <h1><svg class="icon icon-loop">
