--- a/layouts/section/link.html
+++ b/layouts/section/link.html
@@ -1,4 +1,4 @@
-{{ partial "header.html" . }}
+{{ partial "secheader.html" . }}
 {{ partial "sidebar.html" . }}
 	<content>{{"<!-- from section.link.html //-->" | safeHTML}}
 	  <h1><svg class="icon icon-link">
