--- a/layouts/partials/secheader.html
+++ b/layouts/partials/secheader.html
@@ -39,6 +39,8 @@
   <link rel="alternate" type="application/atom+xml" title="Ascraeus Main Feed" href="{{ .Site.BaseURL }}index.xml" />
   <link rel="alternate" type="application/atom+xml" title="Ascraeus Micropost Feed" href="{{ .Site.BaseURL }}micro/index.xml" />
   <link rel="alternate" type="application/json" title="Ascraeus JSON feed" href="{{ .Site.BaseURL}}jsonfeed/index.json" />
+  <link rel="self" href="{{ .Permalink }}" />
+  <link rel="hub" href="https://switchboard.p3k.io/" />
 
   <!-- Metadata for Twitter and OpenGraph -->
   {{ partial "twittergraph.html" . }}
