--- a/layouts/section/article.html
+++ b/layouts/section/article.html
@@ -1,4 +1,4 @@
-{{ partial "header.html" . }}
+{{ partial "secheader.html" . }}
 {{ partial "sidebar.html" . }}
 	<content>{{"<!-- from section.article.html //-->" | safeHTML}}
 	  <h1><svg class="icon icon-blog">
