--- a/layouts/section/review.html
+++ b/layouts/section/review.html
@@ -1,4 +1,4 @@
-{{ partial "header.html" . }}
+{{ partial "secheader.html" . }}
 {{ partial "sidebar.html" . }}
 	<content>{{"<!-- from section.review.html //-->" | safeHTML}}
 	  <h1><svg class="icon icon-star-half">
