Some changes in syntax hilighting New SVGs for Micro.blog & Keybase

--- a/layouts/partials/indexheader.html
+++ b/layouts/partials/indexheader.html
@@ -35,6 +35,7 @@
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/reproach.min.css" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/bigfoot-default.css" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/webmention.css" />
+  <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/syntax.css" />
   {{- if .Site.Author.email }}
   <link rel="me" href="mailto:{{ .Site.Author.email }}" />
   {{- end }}
