--- a/layouts/partials/twittergraph.html
+++ b/layouts/partials/twittergraph.html
@@ -15,11 +15,12 @@
     {{- else }}
     <meta name="twitter:description" property="og:description" content="{{ .Summary }}" />
     {{- end }}
+    <meta property="article:author" content="{{ .Site.Author.name }}" />
     <meta name="twitter:site" content="@AscraeusOrg" />
     <meta name="twitter:creator" content="@_dgoldsmith" />
     <meta property="og:site_name" content="View from Ascraeus" />
     {{- if .Params.image }}
-    <meta name="twitter:image" property="og:image" content="{{ .Params.image}}" />
+    <meta name="twitter:image" property="og:image" content="{{ .Params.image }}" />
     {{- else }}
     <meta name="twitter:image" property="og:image" content="{{ .Site.BaseURL }}icon440.png" />
     {{- end }}
