Icon Name Changes and Font Messing

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -75,8 +75,8 @@
                 {{- end }}
                 {{- if .Site.Author.keybase }}
                 <a href="https://keybase.io/{{ .Site.Author.keybase }}" title="keybase" class="metatag">
-                    <svg class="icon icon-key">
-                         <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-key">
+                    <svg class="icon icon-keybase">
+                         <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-keybase">
                          </use>
                      </svg></a>
                 {{- end }}
