Feeds to page, final

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -59,11 +59,11 @@
                          </use>
                      </svg> <span class="hidden">likes+reposts</span></a>
                 </li>
-                <li><a href="{{ .Site.BaseURL }}index.xml" title="rss feed" class="metatag">
+                <li><a href="{{ .Site.BaseURL }}page/feeds" title="site feeds" class="metatag">
 					<svg class="icon icon-rss">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-rss">
                          </use>
-                     </svg> 				
+                     </svg>
                 <span class="hidden"> feeds</a></li>
 				</ul>			
                     <form method="get" class="hidden" id="search" action="https://duckduckgo.com/">
