--- a/layouts/partials/micrometadata.html
+++ b/layouts/partials/micrometadata.html
@@ -3,7 +3,7 @@
 		{{- if .Params.checkin }}
 		<span class="p-location">{{ .Params.checkadd }}</span>
 		{{- end }}
-		<a href="{{ .Permalink }}" class="metatag u-url u-uid p-name"><time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05" }}">
+		<a href="{{ .Permalink }}" class="metatag u-url u-uid p-name"><time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-07:00" }}">
 		{{ .Date.Format "02/01/06 15:04" }}</time></a>&nbsp;
 		{{ if .Params.like_of }}
 			(originally published on <a href="{{ .Params.like_of }}" class="metatag u-url"><time class="dt-published" datetime="{{ .Params.xPublished }}">{{ dateFormat "02/01/06 15:04" .Params.xPublished }}</time></a>)&nbsp;
