--- a/layouts/partials/indexheader.html
+++ b/layouts/partials/indexheader.html
@@ -41,7 +41,8 @@
   {{- end }}
   <!-- indieweb components --> 
   <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
-  <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
+  <link rel="pingback" href="https://webmention.io/ascraeus.org/xmlrpc" />
+  <link rel="webmention" href="https://webmention.io/ascraeus.org/webmention" />
   <link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
   <link rel="micropub" href="https://ascraeus.org/nanopub.php" />
   <link rel="microsub" href="https://greyarea.ascraeus.org/microsub/1" />
