--- a/static/css/reproach.css
+++ b/static/css/reproach.css
@@ -58,7 +58,7 @@ html {
 }
 
 body {
-    font-family: -apple-system, 
+/*    font-family: -apple-system, 
                  BlinkMacSystemFont, 
                  "Segoe UI", 
                  Roboto, 
@@ -67,6 +67,8 @@ body {
                  Cantarell, 
                  "Helvetica Neue", 
                  sans-serif;
+*/
+    font-family: Georgia, Times, "Times New Roman", serif;
 	font-size: 1em;
   	line-height: 1.6111em;
  	margin: auto;
@@ -167,6 +169,7 @@ sub {
 
 
 div.meta {
+    font-family: Georgia, Times, "Times New Roman", serif;
 	font-size: 75%;
 	font-style: italic;
 	color: #666;
